
Bug fixes
 - [core] remove all alarms before sending IMIP replies (#3925)
 - [core] fixed handling of exdates and proper intersection for fbinfo (#4051)
 - [core] remove attendees that have the same identity as the organizer (#3905)
 - [eas] improved EAS parameters parsing (#4003)
 - [eas] properly handle canceled appointments

2.3.19 (2017-01-09)
-------------------

Enhancements
 - [core] added handling of BYSETPOS for BYDAY in recurrence rules
 - [core] improved IMIP handling from Exchange/Outlook clients
 - [web] update jQuery to version 1.12.4 and jQuery UI to version 1.11.4
 - [web] added SOGoMaximumMessageSizeLimit to limit webmail message size
 - [web] added photo support for LDIF import (#1084)
 - [web] updated CKEditor to version 4.6.1

Bug fixes
 - [core] honor blocking wrong login attemps within time interval (#2850)
 - [core] use source's domain when none defined and trying to match users (#3523)
 - [core] properly honor the "include in freebusy" setting (#3354)
 - [core] fix events in floating time during CalDAV's PUT operation (#2865)
 - [core] handle rounds in sha512-crypt password hashes
 - [web] return login page for unknown users (#2135)
 - [web] append ics file extension when importing events (#2308)
 - [web] set a max-height so we can scroll in the attendees list (#3666)
 - [web] set a max-height so we can scroll in the attachments list (#3413)
 - [web] handle URI in vCard photos (#2683)
 - [web] handle semicolon in values during LDIF import (#1760)
 - [eas] properly escape all GAL responses (#3923)
 - [eas] properly skip folders we don't want to synchronize (#3943)
 - [eas] fixed 30 mins freebusy offset with S Planner
 - [eas] now correctly handles reminders on tasks (#3964)
 - [eas] do not decode from hex the event's UID (#3965)
 - [eas] add support for "other addresses" (#3966)
 - [eas] provide correct response status when sending too big mails (#3956)

2.3.18 (2016-11-28)
-------------------

New features